--- a/templates/register/register.html.twig
+++ b/templates/register/register.html.twig
@@ -158,6 +158,10 @@
                 <input name="tel" type="text" class="form-control" maxlength="8" placeholder="12345678" required>
               </div>
               <div class="col-md-6">
+                <label class="form-label fw-semibold"><i class="bi bi-envelope me-1"></i>Email</label>
+                <input name="email" type="email" class="form-control" placeholder="exemple@mail.com">
+              </div>
+              <div class="col-md-6">
                 <label class="form-label fw-semibold">Nom</label>
                 <input name="name" type="text" class="form-control" placeholder="Votre nom" required>
               </div>
@@ -172,12 +176,12 @@
                   <option value="F">Féminin</option>
                 </select>
               </div>
-              <div class="col-md-4">
-                <label class="form-label fw-semibold">Date de naissance</label>
+              <div class="col-md-8">
+                <label class="form-label fw-semibold"><i class="bi bi-calendar-event me-1"></i>Date de naissance</label>
                 <input id="dobInput" name="date_naissance" type="date" class="form-control">
               </div>
-              <div class="col-md-4">
-                <label class="form-label fw-semibold">Photo de profil</label>
+              <div class="col-md-12">
+                <label class="form-label fw-semibold"><i class="bi bi-image me-1"></i>Photo de profil</label>
                 <input name="image" type="file" accept="image/*" class="form-control">
               </div>
             </div>
