--- a/templates/dashboard/patient/profil.html.twig
+++ b/templates/dashboard/patient/profil.html.twig
@@ -78,6 +78,12 @@
                     <input type="text" id="tel" name="tel" class="form-control" value="{{ user.tel }}" required maxlength="8">
                 </div>
 
+                {# Email #}
+                <div class="col-md-6">
+                    <label for="email" class="form-label fw-bold">Email</label>
+                    <input type="email" id="email" name="email" class="form-control" value="{{ user.email }}" placeholder="exemple@mail.com">
+                </div>
+
                 {# Sexe #}
                 <div class="col-md-6">
                     <label for="sexe" class="form-label fw-bold">Sexe</label>
