fixing medecin dashboard

--- a/templates/dashboard/medecin/_sidebar.html.twig
+++ b/templates/dashboard/medecin/_sidebar.html.twig
@@ -7,12 +7,12 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white rounded-3 px-3 py-2" href="#">
+            <a class="nav-link text-white rounded-3 px-3 py-2" href="{{ path('medecin_patients') }}">
                 <i class="bi bi-people-fill"></i> Mes patients
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white rounded-3 px-3 py-2" href="#">
+            <a class="nav-link text-white rounded-3 px-3 py-2" href="{{ path('medecin_rdvs') }}">
                 <i class="bi bi-calendar-event-fill"></i> Planning
             </a>
         </li>
