--- a/templates/dashboard/medecin/home/medecin.home.html.twig
+++ b/templates/dashboard/medecin/home/medecin.home.html.twig
@@ -1,30 +1,48 @@
 {% extends 'dashboard/layout.html.twig' %}
 
-{% block title %}Medecin Dashboard{% endblock %}
-
 {% block sidebar %}
     {% include 'dashboard/medecin/_sidebar.html.twig' %}
 {% endblock %}
 
 {% block dashboard_content %}
-<div class="container mt-5">
-  <h1 class="mb-4">Dr. {{ medecin.profile.name }} {{ medecin.profile.lastName }}</h1>
-  
+<h2 class="mb-4">Bienvenue Dr. {{ medecin.profile.name }} {{ medecin.profile.last_name }}</h2>
 
-  <h2 class="mt-4">My Rendez-vous</h2>
-  <table class="table table-striped">
+<div class="row g-3 mb-4">
+    <div class="col-md-4">
+        <div class="card text-white bg-primary shadow-sm h-100 text-center">
+            <div class="card-body">
+                <h3>{{ patientsCount }}</h3>
+                <small>Patients</small>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card text-white bg-success shadow-sm h-100 text-center">
+            <div class="card-body">
+                <h3>{{ rdvCount }}</h3>
+                <small>Rendez-vous</small>
+            </div>
+        </div>
+    </div>
+</div>
+
+<h3>Rendez-vous par statut</h3>
+<table class="table table-striped">
     <thead>
-      <tr>
-        <th>Date</th>
-        <th>Patient</th>
-        <th>Motif</th>
-        <th>Etat</th>
-        <th>Actions</th>
-      </tr>
+        <tr>
+            <th>Statut</th>
+            <th>Nombre</th>
+        </tr>
     </thead>
     <tbody>
-    
+        {% for row in rdvByStatus %}
+            <tr>
+                <td>{{ row.etat }}</td>
+                <td>{{ row.total }}</td>
+            </tr>
+        {% else %}
+            <tr><td colspan="2">Aucun rendez-vous</td></tr>
+        {% endfor %}
     </tbody>
-  </table>
-</div>
+</table>
 {% endblock %}
