--- a/templates/dashboard/medecin/home/medecin.home.html.twig
+++ b/templates/dashboard/medecin/home/medecin.home.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block dashboard_content %}
-<h2 class="mb-4">Bienvenue Dr. {{ medecin.profile.name }} {{ medecin.profile.last_name }}</h2>
+<h2 class="mb-4">Bienvenue Dr. {{ medecin.profile.name }} {{ medecin.profile.lastName }}</h2>
 
 <div class="row g-3 mb-4">
     <div class="col-md-4">
