--- a/templates/dashboard/medecin/patients/medecin.patients.html.twig
+++ b/templates/dashboard/medecin/patients/medecin.patients.html.twig
@@ -8,9 +8,7 @@
 <h2>Mes Patients</h2>
 
 <form method="get" class="mb-3">
-    <input type="text" name="cin" placeholder="CIN" value="{{ app.request.query.get('cin') }}">
-    <input type="text" name="nom" placeholder="Nom / Prénom" value="{{ app.request.query.get('nom') }}">
-    <input type="text" name="email" placeholder="Email" value="{{ app.request.query.get('email') }}">
+    <input type="text" name="search" placeholder="CIN, Nom, Prénom ou Email" value="{{ search ?? '' }}" class="form-control" style="width:300px;display:inline-block;margin-right:5px;">
     <button class="btn btn-primary">Filtrer</button>
     <a href="{{ path('medecin_patients') }}" class="btn btn-secondary">Reset</a>
 </form>
@@ -36,7 +34,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">Aucun patient trouvé</td>
+                <td colspan="5" class="text-center">Aucun patient trouvé</td>
             </tr>
         {% endfor %}
     </tbody>
